# email_assistant

./: .gitignore  langgraph.json  pyproject.toml  requirements.txt
notebooks/: explore.ipynb  memory_and_hitl.ipynb
src/email_assistant/: __init__.py  email_tools.py  graph.py  memory.py  prompts.py  response_tool.py  triage.py  utils.py
src/gmail_utils/: cron.py  gmail_graph.py  gmail_tools.py  ingestion.py  memory.py  prompts.py  response.py  schemas.py  setup.py  test_Stuff.py  triage.py  utils.py
